--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
         <div class='col-12'>
           <h1>To-Do List</h1>
       
-          <div id='inputDiv'>
+          <form id='input-form'>
             <!-- adding new tasks -->
-            <input class='inputField' name='newToDo' type='text' placeholder='Add new task'>
-            <button class='btn btn-light' id='addButton'><i class="fas fa-plus"></i></button>
-          </div>
+            <input class='input-task' name='new-to-do' type='text' placeholder='Add new task' required>
+            <button class='btn btn-light' id='add-button'><i class="fas fa-plus"></i></button>
+          </form>
 
-          <div id='todoList'>
+          <div id='todo-list'>
             <!-- Tasks List -->
-           <!--  <div class='newToDo'>Do Laundry<button class='btn btn-light' id='removeButton'><i class="fas fa-minus"></i></button></div>
-            <div class='newToDo'>Create To-Do List<button class='btn btn-light' id='removeButton'><i class="fas fa-minus"></i></button></div> -->
+           <!--  <div class='new-to-do'>Do Laundry<button class='btn btn-light' id='remove-button'><i class="fas fa-minus"></i></button></div>
+            <div class='new-to-do'>Create To-Do List<button class='btn btn-light' id='remove-button'><i class="fas fa-minus"></i></button></div> -->
         </div>
 
       </div>
