--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       
           <form id='input-form'>
             <!-- adding new tasks -->
-            <input class='input-task' name='new-to-do' type='text' placeholder='Add new task' required>
+            <input id='input-task' name='new-to-do' type='text' placeholder='Add new task' required>
             <button class='btn btn-light' id='add-button'><i class="fas fa-plus"></i></button>
           </form>
 
