--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <header>
       <h1 id='title'>To-Do List</h1>
     </header>
-    <div class='container'>
+    <div class='container mt-4'>
       <div class='row'>
         <div class='col-12'>
       
@@ -38,7 +38,7 @@
             <button class='btn btn-light' id='add-button'><i class="fas fa-plus"></i></button>
           </form>
 
-          <div id='todo-list'>
+          <div id='todo-list' class='mt-4 ml-3'>
             <!-- Tasks List -->
            <!--  <div class='new-to-do'>Do Laundry<button class='btn btn-light' id='remove-button'><i class="fas fa-minus"></i></button></div>
             <div class='new-to-do'>Create To-Do List<button class='btn btn-light' id='remove-button'><i class="fas fa-minus"></i></button></div> -->
