--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
     </header>
     <div class='container mt-4'>
       <div class='row'>
-        <div class='col-12'>
+        <div class='col-6'>
       
           <form id='input-form'>
             <!-- adding new tasks -->
             <input id='input-task' name='new-to-do' type='text' placeholder='Add new task' required>
-            <button class='btn btn-light' id='add-button'><i class="fas fa-plus"></i></button>
+            <button class='btn btn-success ml-2 btn-sm' id='add-button'><i class="fas fa-plus"></i></button>
           </form>
 
-          <div id='todo-list' class='mt-4 ml-3'>
+          <div id='todo-list' class='mt-4 ml-4'>
             <!-- Tasks List -->
            <!--  <div class='new-to-do'>Do Laundry<button class='btn btn-light' id='remove-button'><i class="fas fa-minus"></i></button></div>
             <div class='new-to-do'>Create To-Do List<button class='btn btn-light' id='remove-button'><i class="fas fa-minus"></i></button></div> -->
